# TemplateRepoCxx

./: .gitignore  CMakeLists.txt  conanfile.txt
test/: CMakeLists.txt  test_g.cpp
